--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </tr>
         <tr>
             <td id="room0" class="room">
-                <a href="cataso/A.html" target="_blank">
-                    <div class="room-title">カタソA</div>
+                <a href="cataso/I.html" target="_blank">
+                    <div class="room-title">カタソⅠⅠ</div>
                     <div class="room-number"></div>
                     <div class="cataso-ready"></div>
                 </a>
